Modified antlr4 parser and lexer to reduce memory leaks

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
             <artifactId>mining-model</artifactId>
             <version>1.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4</artifactId>
@@ -123,6 +124,17 @@
             <artifactId>auto-service</artifactId>
             <version>1.0-rc3</version>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.12</version>
         </dependency>
     </dependencies>
 </project>
